--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -393,6 +393,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 373.891571\n",
+      "Minibatch accuracy: 6.2%\n",
+      "Validation accuracy: 28.0%\n",
+      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Minibatch loss at step 1000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Minibatch loss at step 1500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Minibatch loss at step 2000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Minibatch loss at step 2500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Minibatch loss at step 3000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 71.5%\n",
+      "Test accuracy: 79.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of hidden nodes\n",
+    "num_hidden_nodes = 1024\n",
+    "batch_size = 128\n",
+    "num_steps = 3001\n",
+    "\n",
+    "train_data_trimmed = train_dataset[:128*3]\n",
+    "train_labels_trimmed = train_labels[:128*3]\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    # Input data.\n",
+    "    # Load the training, validation and test data into constants that are\n",
+    "    # attached to the graph.\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                      shape=(batch_size, image_size * image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,\n",
+    "                                     shape=(batch_size, num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    \n",
+    "    # Variables for our hidden layer.\n",
+    "    W1 = tf.Variable(\n",
+    "        tf.truncated_normal([image_size * image_size, num_hidden_nodes]))\n",
+    "    B1 = tf.Variable(tf.zeros([num_hidden_nodes]))\n",
+    "    \n",
+    "    # Our output layer variables, needs to have 10 neurons for our output\n",
+    "    W2 = tf.Variable(\n",
+    "        tf.truncated_normal([num_hidden_nodes, num_labels]))\n",
+    "    B2 = tf.Variable(tf.zeros([10]))\n",
+    "    \n",
+    "    # Our hidden layer with relus\n",
+    "    Y1 = tf.nn.relu(tf.matmul(tf_train_dataset, W1) + B1)\n",
+    "  \n",
+    "    # Our final layer with logits\n",
+    "    Ylogits = tf.matmul(Y1, W2) + B2\n",
+    "    \n",
+    "    # Loss function (= cross entropy) we'll be minimising\n",
+    "    # One function in TF to avoid numerical stability problems with log(0)\n",
+    "    # This now includes L2 regularization for our weights: both\n",
+    "    # hidden weights W1 and output weights W2 \n",
+    "    loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=Ylogits))\n",
+    "  \n",
+    "    # Optimizer.\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  \n",
+    "    # Predictions for the training, validation, and test data.\n",
+    "    train_prediction = tf.nn.softmax(Ylogits)\n",
+    "    valid_prediction_hidden = tf.nn.relu(tf.matmul(tf_valid_dataset, W1) + B1)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(valid_prediction_hidden, W2) + B2)\n",
+    "    test_prediction_hidden = tf.nn.relu(tf.matmul(tf_test_dataset, W1) + B1)\n",
+    "    test_prediction = tf.nn.softmax(tf.matmul(test_prediction_hidden, W2) + B2)\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print('Initialized')\n",
+    "    \n",
+    "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (train_labels_trimmed.shape[0] - batch_size)\n",
+    "        batch_data = train_data_trimmed[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels_trimmed[offset:(offset + batch_size), :]\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        # Run the computations. We tell .run() that we want to run the optimizer,\n",
+    "        # and get the loss value and the training predictions returned as numpy\n",
+    "        # arrays.\n",
+    "        _, l, predictions = session.run(\n",
+    "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 500 == 0):\n",
+    "            print('Minibatch loss at step %d: %f' % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've restricted our training set to just 3 batches, and whilst we've gotten minibatch accuracy of 100% quite fast, our final test accuracy is way below what we'd have expected (79%). What happened is that we've completely fitted our model to our training data, fully memorizing every single letter. Whilst this works great for our training data (100%) this is failing quite fast on our test set (79%)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
