--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -404,28 +404,37 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 373.891571\n",
-      "Minibatch accuracy: 6.2%\n",
-      "Validation accuracy: 28.0%\n",
-      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch loss at step 0: 366.046326\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 31.9%\n",
+      "Minibatch loss at step 10: 59.842346\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 71.4%\n",
+      "Minibatch loss at step 20: 25.547718\n",
+      "Minibatch accuracy: 97.7%\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 30: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Minibatch loss at step 1000: 0.000000\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 40: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Minibatch loss at step 1500: 0.000000\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 50: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Minibatch loss at step 2000: 0.000000\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 60: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Minibatch loss at step 2500: 0.000000\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 70: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Minibatch loss at step 3000: 0.000000\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 80: 0.000000\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 71.5%\n",
-      "Test accuracy: 79.0%\n"
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 90: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 72.9%\n",
+      "Test accuracy: 80.5%\n"
      ]
     }
    ],
@@ -433,7 +442,7 @@
     "# Number of hidden nodes\n",
     "num_hidden_nodes = 1024\n",
     "batch_size = 128\n",
-    "num_steps = 3001\n",
+    "num_steps = 100\n",
     "\n",
     "train_data_trimmed = train_dataset[:128*3]\n",
     "train_labels_trimmed = train_labels[:128*3]\n",
@@ -497,7 +506,7 @@
     "        # arrays.\n",
     "        _, l, predictions = session.run(\n",
     "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if (step % 500 == 0):\n",
+    "        if (step % 10 == 0):\n",
     "            print('Minibatch loss at step %d: %f' % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
@@ -508,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've restricted our training set to just 3 batches, and whilst we've gotten minibatch accuracy of 100% quite fast, our final test accuracy is way below what we'd have expected (79%). What happened is that we've completely fitted our model to our training data, fully memorizing every single letter. Whilst this works great for our training data (100%) this is failing quite fast on our test set (79%)."
+    "We've restricted our training set to just 3 batches, and whilst we've gotten minibatch accuracy of 100% quite fast, our final test accuracy is way below what we'd have expected (80.5%). What happened is that we've completely fitted our model to our training data, fully memorizing every single letter. Whilst this works great for our training data (100%) this is failing quite fast on our test set (80.5%)."
    ]
   },
   {
@@ -528,6 +537,336 @@
     "What happens to our extreme overfitting case?\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 515.727234\n",
+      "Minibatch accuracy: 6.2%\n",
+      "Validation accuracy: 30.9%\n",
+      "Minibatch loss at step 10: 42.008221\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 70.6%\n",
+      "Minibatch loss at step 20: 9.839355\n",
+      "Minibatch accuracy: 97.7%\n",
+      "Validation accuracy: 74.6%\n",
+      "Minibatch loss at step 30: 18.338013\n",
+      "Minibatch accuracy: 95.3%\n",
+      "Validation accuracy: 72.9%\n",
+      "Minibatch loss at step 40: 7.787116\n",
+      "Minibatch accuracy: 96.9%\n",
+      "Validation accuracy: 72.5%\n",
+      "Minibatch loss at step 50: 1.164151\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 74.6%\n",
+      "Minibatch loss at step 60: 1.534826\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.1%\n",
+      "Minibatch loss at step 70: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.3%\n",
+      "Minibatch loss at step 80: 1.160682\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 90: 0.202168\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 74.6%\n",
+      "Minibatch loss at step 100: 5.371190\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 74.8%\n",
+      "Minibatch loss at step 110: 2.165331\n",
+      "Minibatch accuracy: 97.7%\n",
+      "Validation accuracy: 74.9%\n",
+      "Minibatch loss at step 120: 0.840397\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.6%\n",
+      "Minibatch loss at step 130: 2.727415\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.5%\n",
+      "Minibatch loss at step 140: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.5%\n",
+      "Minibatch loss at step 150: 0.733137\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.9%\n",
+      "Minibatch loss at step 160: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 170: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.8%\n",
+      "Minibatch loss at step 180: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.9%\n",
+      "Minibatch loss at step 190: 0.786125\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.8%\n",
+      "Minibatch loss at step 200: 4.612286\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 74.3%\n",
+      "Minibatch loss at step 210: 0.994398\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 220: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.1%\n",
+      "Minibatch loss at step 230: 0.479839\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 73.7%\n",
+      "Minibatch loss at step 240: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.0%\n",
+      "Minibatch loss at step 250: 0.138055\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.3%\n",
+      "Minibatch loss at step 260: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 74.8%\n",
+      "Minibatch loss at step 270: 2.523303\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 74.7%\n",
+      "Minibatch loss at step 280: 0.000008\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 290: 1.033418\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 74.8%\n",
+      "Minibatch loss at step 300: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 310: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 320: 0.265471\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 330: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 340: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 350: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 360: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.1%\n",
+      "Minibatch loss at step 370: 8.918655\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 380: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 390: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 400: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 410: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 420: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 430: 0.195929\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 440: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 450: 0.000002\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.6%\n",
+      "Minibatch loss at step 460: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 470: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 480: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.6%\n",
+      "Minibatch loss at step 490: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 76.1%\n",
+      "Minibatch loss at step 510: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 520: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 76.0%\n",
+      "Minibatch loss at step 530: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 76.0%\n",
+      "Minibatch loss at step 540: 1.095129\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.8%\n",
+      "Minibatch loss at step 550: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 560: 1.135069\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 570: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 580: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 590: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 600: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 610: 0.000066\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.1%\n",
+      "Minibatch loss at step 620: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 630: 0.238487\n",
+      "Minibatch accuracy: 98.4%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 640: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 650: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.5%\n",
+      "Minibatch loss at step 660: 0.581586\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 75.6%\n",
+      "Minibatch loss at step 670: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 680: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 690: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 700: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 710: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 720: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 730: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 740: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 750: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.3%\n",
+      "Minibatch loss at step 760: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of hidden nodes\n",
+    "num_hidden_nodes = 1024\n",
+    "batch_size = 128\n",
+    "num_steps = 1000\n",
+    "\n",
+    "train_data_trimmed = train_dataset[:128*3]\n",
+    "train_labels_trimmed = train_labels[:128*3]\n",
+    "\n",
+    "# Our dropout probabibility to keep units, meaning we'll shoot randomly 25% of our units\n",
+    "dropout = 0.5\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    # Input data.\n",
+    "    # Load the training, validation and test data into constants that are\n",
+    "    # attached to the graph.\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                      shape=(batch_size, image_size * image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,\n",
+    "                                     shape=(batch_size, num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    # We will learn our regularization parameter, rather than hardcoding this\n",
+    "    tf_dropout = tf.placeholder(tf.float32)\n",
+    "    \n",
+    "    # Variables for our hidden layer.\n",
+    "    W1 = tf.Variable(\n",
+    "        tf.truncated_normal([image_size * image_size, num_hidden_nodes]))\n",
+    "    B1 = tf.Variable(tf.zeros([num_hidden_nodes]))\n",
+    "    \n",
+    "    # Our output layer variables, needs to have 10 neurons for our output\n",
+    "    W2 = tf.Variable(\n",
+    "        tf.truncated_normal([num_hidden_nodes, num_labels]))\n",
+    "    B2 = tf.Variable(tf.zeros([10]))\n",
+    "    \n",
+    "    # Our hidden layer with relus\n",
+    "    Y1 = tf.nn.relu(tf.matmul(tf_train_dataset, W1) + B1)\n",
+    "    \n",
+    "    # Introduce dropout on our hidden layer\n",
+    "    Y1_dropout = tf.nn.dropout(Y1, tf_dropout)\n",
+    "  \n",
+    "    # Our final layer with logits\n",
+    "    Ylogits = tf.matmul(Y1_dropout, W2) + B2\n",
+    "    \n",
+    "    # Loss function (= cross entropy) we'll be minimising\n",
+    "    # One function in TF to avoid numerical stability problems with log(0)\n",
+    "    # This now includes L2 regularization for our weights: both\n",
+    "    # hidden weights W1 and output weights W2 \n",
+    "    loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=Ylogits))\n",
+    "  \n",
+    "    # Optimizer.\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  \n",
+    "    # Predictions for the training, validation, and test data.\n",
+    "    train_prediction = tf.nn.softmax(Ylogits)\n",
+    "    valid_prediction_hidden = tf.nn.relu(tf.matmul(tf_valid_dataset, W1) + B1)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(valid_prediction_hidden, W2) + B2)\n",
+    "    test_prediction_hidden = tf.nn.relu(tf.matmul(tf_test_dataset, W1) + B1)\n",
+    "    test_prediction = tf.nn.softmax(tf.matmul(test_prediction_hidden, W2) + B2)\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print('Initialized')\n",
+    "    \n",
+    "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (train_labels_trimmed.shape[0] - batch_size)\n",
+    "        batch_data = train_data_trimmed[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels_trimmed[offset:(offset + batch_size), :]\n",
+    "        feed_dict = {tf_train_dataset : batch_data, \n",
+    "                     tf_train_labels : batch_labels, \n",
+    "                     tf_dropout: dropout}\n",
+    "        # Run the computations. We tell .run() that we want to run the optimizer,\n",
+    "        # and get the loss value and the training predictions returned as numpy\n",
+    "        # arrays.\n",
+    "        _, l, predictions = session.run(\n",
+    "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 10 == 0):\n",
+    "            print('Minibatch loss at step %d: %f' % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
